--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-hello world!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Sample Website</title>
+</head>
+<body>
+    <img src="/drawing_2022-03-11_01-23-53.png" alt="my image">
+    <p>Hello World!</p>
+    
+</body>
+</html>
